--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue3-firebase",
   "version": "0.1.0",
   "private": true,
-  "author": "Justin Brooks <justin@datatorch.io>",
+  "author": "J Parker",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
