--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@firebase/auth": "^0.19.10",
     "core-js": "^3.6.5",
     "firebase": "^8.2.1",
     "firebase-tools": "^9.1.0",
