--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^8.2.1",
     "firebase-tools": "^9.1.0",
     "vue": "^3.0.0",
+    "vue-loading-overlay": "^5.0.3",
     "vue-print-nb": "^1.7.5",
     "vue-router": "^4.0.0-0"
   },
